--- a/ExpensesManagment.Web/Views/Shared/_Layout.cshtml
+++ b/ExpensesManagment.Web/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Expenses" asp-action="Index">Expenses</a></li>
                 </ul>
             </div>
         </div>
