Improving IndexPage For Showing Expenses

--- a/ExpensesManagment.Web/Views/Expenses/Index.cshtml
+++ b/ExpensesManagment.Web/Views/Expenses/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
-<br/>
+<br />
 
 <p>
     <a asp-action="Create" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i></a>
@@ -23,6 +23,9 @@
                     <thead>
                         <tr>
                             <th>
+                                @Html.DisplayNameFor(model => model.LogoPath)
+                            </th>
+                            <th>
                                 @Html.DisplayNameFor(model => model.ExpenseName)
                             </th>
                             <th>
@@ -31,12 +34,19 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.PicturePath)
                             </th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
                             <tr>
+                                <td>
+                                    @if (!string.IsNullOrEmpty(item.LogoPath))
+                                    {
+                                        <img src="@Url.Content(item.LogoPath)" alt="Image" style="width:100px;height:100px;max-width: 100%; height: auto;" />
+                                    }
+                                </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.ExpenseName)
                                 </td>
@@ -49,11 +59,40 @@
                                         <img src="@Url.Content(item.PicturePath)" alt="Image" style="width:100px;height:100px;max-width: 100%; height: auto;" />
                                     }
                                 </td>
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning"><i class="glyphicon glyphicon-pencil"></i></a>
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info"><i class="glyphicon glyphicon-align-justify"></i></a>
+                                    <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
+                                </td>
                             </tr>
                         }
                     </tbody>
-                </table> 
+                </table>
             </div>
         </div>
     </div>
 </div>
+
+<partial name="_DeleteDialog" />
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#ExpensesTable').DataTable();
+
+            // Delete item
+            var item_to_delete;
+
+            $('.deleteItem').click((e) => {
+                item_to_delete = e.currentTarget.dataset.id;
+            });
+
+            $("#btnYesDelete").click(function () {
+                window.location.href = '/Expense/Delete/' + item_to_delete;
+            });
+        });
+    </script>
+}
