Adding ExpenseTypeEntity and Create Button

--- a/ExpensesManagment.Web/Views/Expenses/Details.cshtml
+++ b/ExpensesManagment.Web/Views/Expenses/Details.cshtml
@@ -19,8 +19,8 @@
                     }
                 </div>
                 <div class="col-md-4">
-                    <label asp-for="ExpenseName" class="control-label"></label>
-                    <input asp-for="ExpenseName" class="form-control" readonly />
+                    <label asp-for="ExpenseType.Name" class="control-label"></label>
+                    <input asp-for="ExpenseType.Name" class="form-control" readonly />
                 </div>
             </div>
             <div class="row">
