--- a/ExpensesManagment.Web/Views/Expenses/Index.cshtml
+++ b/ExpensesManagment.Web/Views/Expenses/Index.cshtml
@@ -20,13 +20,14 @@
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="ExpensesTable">
+
                     <thead>
                         <tr>
                             <th>
                                 @Html.DisplayNameFor(model => model.LogoPath)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ExpenseName)
+                                @Html.DisplayNameFor(model => model.ExpenseType.Name)
                             </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.Value)
@@ -48,7 +49,7 @@
                                     }
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.ExpenseName)
+                                    @Html.DisplayFor(modelItem => item.ExpenseType.Name)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Value)
