Adding Edit View

--- a/ExpensesManagment.Web/Views/Expenses/Index.cshtml
+++ b/ExpensesManagment.Web/Views/Expenses/Index.cshtml
@@ -92,7 +92,7 @@
             });
 
             $("#btnYesDelete").click(function () {
-                window.location.href = '/Expense/Delete/' + item_to_delete;
+                window.location.href = '/Expenses/Delete/' + item_to_delete;
             });
         });
     </script>
