--- a/ExpensesManagment.Web/Views/Expenses/Edit.cshtml
+++ b/ExpensesManagment.Web/Views/Expenses/Edit.cshtml
@@ -1,26 +1,33 @@
 ﻿@model ExpensesManagment.Web.Models.ExpenseViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Expense Details";
 }
 
-<h2>Create</h2>
-
-<h4>New Expense</h4>
+<h1>Edit</h1>
+<h4>Modify the expense:</h4>
 <hr />
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="PicturePath" />
 
             <div class="form-group">
-                <label asp-for="ExpenseId" class="control-label"></label>
-                <select asp-for="ExpenseId" asp-items="Model.ExpensesType" class="form-control"></select>
-                <span asp-validation-for="ExpenseId" class="text-danger"></span>
+                <div class="col-md-4">
+                    @if (!string.IsNullOrEmpty(Model.LogoPath))
+                    {
+                        <img src="@Url.Content(Model.LogoPath)" alt="Image" style="width:100px;height:100px;max-width: 100%; height: auto;" />
+                    }
+                </div>
+                <div class="col-md-6">
+                    <label asp-for="ExpenseId" class="control-label"></label>
+                    <select asp-for="ExpenseId" asp-items="Model.ExpensesType" class="form-control"></select>
+                    <span asp-validation-for="ExpenseId" class="text-danger"></span>
+                </div>
             </div>
-
             <div class="form-group">
                 <label asp-for="Details" class="control-label"></label>
                 <input asp-for="Details" class="form-control" />
@@ -40,10 +47,15 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Edit" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-success"><i class="glyphicon glyphicon-menu-left"></i>Back to List</a>
             </div>
-
         </form>
+    </div>
+    <div class="col-md-4">
+        @if (!string.IsNullOrEmpty(Model.PicturePath))
+        {
+            <img src="@Url.Content(Model.PicturePath)" alt="Image" style="width:300px;height:300px;max-width: 100%; height: auto;" />
+        }
     </div>
 </div>
