--- a/ExpensesManagment.Web/Views/Expenses/Create.cshtml
+++ b/ExpensesManagment.Web/Views/Expenses/Create.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+
 
             <div class="form-group">
                 <label asp-for="ExpenseId" class="control-label"></label>
@@ -47,3 +47,7 @@
         </form>
     </div>
 </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
