--- a/ExpensesManagment.Web/Views/Expenses/Edit.cshtml
+++ b/ExpensesManagment.Web/Views/Expenses/Edit.cshtml
@@ -10,10 +10,11 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="PicturePath" />
+            <input type="hidden" asp-for="Date" />
 
             <div class="form-group">
                 <div class="col-md-4">
@@ -42,7 +43,7 @@
 
             <div class="form-group">
                 <label asp-for="PictureFile" class="control-label"></label>
-                <input asp-for="PictureFile" class="form-control" type="file" />
+                <input asp-for="PictureFile" class="form-control-file" type="file" />
                 <span asp-validation-for="PictureFile" class="text-danger"></span>
             </div>
 
@@ -59,3 +60,7 @@
         }
     </div>
 </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
