--- a/ExpensesManagment.Web/Views/Trip/Index.cshtml
+++ b/ExpensesManagment.Web/Views/Trip/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ExpensesManagment.Web.Data.Entities.ExpenseEntity>
+﻿@model IEnumerable<ExpensesManagment.Web.Data.Entities.TripEntity>
 
 @{
     ViewData["Title"] = "Index";
@@ -15,24 +15,23 @@
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Expenses</h3>
+                <h3 class="panel-title">Trips</h3>
             </div>
-            <div class="panel-body">
-                <table class="table table-hover table-responsive table-striped" id="ExpensesTable">
-
+            <div class="panel panel-body">
+                <table class="table table-hover table-responsive table-striped" id="TripTable">
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.ExpenseType.LogoPath)
+                                @Html.DisplayNameFor(model => model.CityVisited)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ExpenseType.Name)
+                                @Html.DisplayNameFor(model => model.StartDate)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Value)
+                                @Html.DisplayNameFor(model => model.EndDate)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.PicturePath)
+                                # Expenses
                             </th>
                             <th></th>
                         </tr>
@@ -42,22 +41,16 @@
                         {
                             <tr>
                                 <td>
-                                    @if (!string.IsNullOrEmpty(item.ExpenseType.LogoPath))
-                                    {
-                                        <img src="@Url.Content(item.ExpenseType.LogoPath)" alt="Image" style="width:100px;height:100px;max-width: 100%; height: auto;" />
-                                    }
+                                    @Html.DisplayFor(modelItem => item.CityVisited)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.ExpenseType.Name)
+                                    @Html.DisplayFor(modelItem => item.StartDateLocal)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Value)
+                                    @Html.DisplayFor(modelItem => item.EndDateLocal)
                                 </td>
                                 <td>
-                                    @if (!string.IsNullOrEmpty(item.PicturePath))
-                                    {
-                                        <img src="@Url.Content(item.PicturePath)" alt="Image" style="width:100px;height:100px;max-width: 100%; height: auto;" />
-                                    }
+                                    @Html.DisplayFor(modelItem => item.Expenses.Count)
                                 </td>
                                 <td>
                                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning"><i class="glyphicon glyphicon-pencil"></i></a>
@@ -81,7 +74,7 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#ExpensesTable').DataTable();
+            $('#TripTable').DataTable();
 
             // Delete item
             var item_to_delete;
@@ -91,7 +84,7 @@
             });
 
             $("#btnYesDelete").click(function () {
-                window.location.href = '/Expenses/Delete/' + item_to_delete;
+                window.location.href = '/Trip/Delete/' + item_to_delete;
             });
         });
     </script>
