Adding Create A New Trip

--- a/ExpensesManagment.Web/Views/Trip/UserTripDetail.cshtml
+++ b/ExpensesManagment.Web/Views/Trip/UserTripDetail.cshtml
@@ -37,7 +37,7 @@
 </div>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>Add New Trip</a>
+    <a asp-action="Create" asp-route-id="@Model.UserId" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>Add New Trip</a>
 </p>
 
 <div class="row">
