Adding DeleteTrip and DeleteUser

--- a/ExpensesManagment.Web/Views/Trip/UserTrip.cshtml
+++ b/ExpensesManagment.Web/Views/Trip/UserTrip.cshtml
@@ -76,7 +76,7 @@
             });
 
             $("#btnYesDelete").click(function () {
-                window.location.href = '/Trip/Delete/' + item_to_delete;
+                window.location.href = '/Trip/DeleteUser/' + item_to_delete;
             });
         });
     </script>
