--- a/ExpensesManagment.Web/Views/Trip/UserTripDetail.cshtml
+++ b/ExpensesManagment.Web/Views/Trip/UserTripDetail.cshtml
@@ -38,6 +38,7 @@
 
 <p>
     <a asp-action="Create" asp-route-id="@Model.UserId" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>Add New Trip</a>
+    <a asp-action="UserTrip" class="btn btn-success"><i class="glyphicon glyphicon-menu-left"></i>Go Back</a>
 </p>
 
 <div class="row">
