--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/TripsPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/TripsPage.xaml
@@ -59,7 +59,7 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
         </StackLayout>
-        <busyindicator:SfBusyIndicator AnimationType="Gear" 
+        <busyindicator:SfBusyIndicator AnimationType="ZoomingTarget" 
                                         AbsoluteLayout.LayoutBounds=".5,.5,.5,.5"
                 	                    AbsoluteLayout.LayoutFlags="All"
                 	                    BackgroundColor="{StaticResource ColorAccent}"
