Implemeting Register in App

--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/App.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/App.xaml
@@ -7,6 +7,7 @@
 
         <!-- Parameters -->
         <x:String x:Key="UrlAPI">https://expensesmanagmentweb.azurewebsites.net/</x:String>
+        <x:String x:Key="UrlNoImage">https://expensesmanagmentweb.azurewebsites.net/images/noimage.png</x:String>
 
 
         <!-- Colors -->
