--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/RegisterPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/RegisterPage.xaml
@@ -2,9 +2,152 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+             xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+             xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="ExpensesManagment.Prism.Views.RegisterPage"
              Title="{Binding Title}"
              BackgroundColor="{StaticResource ColorBackgroud}">
-  
+
+    <AbsoluteLayout>
+        <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1"
+                     AbsoluteLayout.LayoutFlags="All"
+                     Padding="5">
+            <ScrollView>
+                <StackLayout>
+                    <ffimageloading:CachedImage Aspect="AspectFit"
+                                                Source="{Binding Image}" 
+                                                CacheDuration= "50"
+                                                HeightRequest="150"
+                                                Margin="5"
+                                                RetryCount= "3"
+                                                RetryDelay= "600">
+                        <ffimageloading:CachedImage.Transformations>
+                            <fftransformations:CircleTransformation />
+                        </ffimageloading:CachedImage.Transformations>
+                        <ffimageloading:CachedImage.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding ChangeImageCommand}"/>
+                        </ffimageloading:CachedImage.GestureRecognizers>
+                    </ffimageloading:CachedImage>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="3*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <Label Grid.Row="0"
+                               Grid.Column="0"
+                               Text="Document"
+                               VerticalOptions="Center"/>
+                        <Entry Grid.Row="0"
+                               Grid.Column="1"
+                               Keyboard="Numeric"
+                               Placeholder="Entry your document"
+                               Text="{Binding User.Document}"/>
+
+                        <Label Grid.Row="1"
+                               Grid.Column="0"
+                               Text="First Name"
+                               VerticalOptions="Center"/>
+                        <Entry Grid.Row="1"
+                               Grid.Column="1"
+                               Placeholder="Entry your first name"
+                               Text="{Binding User.FirstName}"/>
+
+                        <Label Grid.Row="2"
+                               Grid.Column="0"
+                               Text="Last Name"
+                               VerticalOptions="Center"/>
+                        <Entry Grid.Row="2"
+                               Grid.Column="1"
+                               Placeholder="Entry your last name"
+                               Text="{Binding User.LastName}"/>
+                        
+                        <Label Grid.Row="4"
+                               Grid.Column="0"
+                               Text="Email"
+                               VerticalOptions="Center"/>
+                        <Entry Grid.Row="4"
+                               Grid.Column="1"
+                               Keyboard="Email"
+                               Placeholder="Entry your email"
+                               Text="{Binding User.Email}"/>
+
+                        <Label Grid.Row="5"
+                               Grid.Column="0"
+                               Text="Phone"
+                               VerticalOptions="Center"/>
+                        <Entry Grid.Row="5" 
+                               Grid.Column="1"
+                               Keyboard="Telephone"
+                               Placeholder="Entry your phone number"
+                               Text="{Binding User.Phone}"/>
+
+                        <Label Grid.Row="6"
+                               Grid.Column="0"
+                               Text="Password"
+                               VerticalOptions="Center"/>
+                        <Entry Grid.Row="6"
+                               Grid.Column="1"
+                               IsPassword="True"
+                               Placeholder="Entry your password"
+                               Text="{Binding User.Password}"/>
+
+                        <Label Grid.Row="7"
+                               Grid.Column="0"
+                               Text="Confirm Password"
+                               VerticalOptions="Center"/>
+                        <Entry Grid.Row="7"
+                               Grid.Column="1"
+                               IsPassword="True"
+                               Placeholder="Entry your password"
+                               Text="{Binding User.PasswordConfirm}"/>
+
+                        <Label Grid.Row="8"
+                               Grid.Column="0"
+                               Text="Register As"
+                               VerticalOptions="Center"/>
+                        <Picker Grid.Row="8"
+                                Grid.Column="1"
+                                ItemDisplayBinding="{Binding Name}"
+                                ItemsSource="{Binding Roles}"
+                                SelectedItem="{Binding Role}"
+                                Title="Select a role"
+                                BackgroundColor="{StaticResource ColorFontInverse}">
+                        </Picker>
+                    </Grid>
+                </StackLayout>
+            </ScrollView>
+            <Button Command="{Binding RegisterCommand}"
+                    IsEnabled="{Binding IsEnabled}"
+                    Text="Register"/>
+        </StackLayout>
+        <busyindicator:SfBusyIndicator AnimationType="ZoomingTarget" 
+                                       AbsoluteLayout.LayoutBounds=".5,.5,.5,.5"
+                	                   AbsoluteLayout.LayoutFlags="All"
+                	                   BackgroundColor="{StaticResource ColorAccent}"
+                	                   HorizontalOptions="Center"
+                	                   TextColor="{StaticResource ColorFontInverse}"
+                	                   IsVisible="{Binding IsRunning}"
+                	                   Title="Loading..."
+                	                   VerticalOptions="Center"
+                	                   ViewBoxWidth="80"
+                	                   ViewBoxHeight="80" />
+    </AbsoluteLayout>
+
+
 </ContentPage>
