Adding Recover Password in App

--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/LoginPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/LoginPage.xaml
@@ -15,9 +15,9 @@
             <Image HeightRequest="200"
                    Margin="0,20,0,0"
                    Source="ExpensesIcon"/>
-            <Grid Margin="20" 
-                  VerticalOptions="CenterAndExpand">
-                <Grid.ColumnDefinitions>
+            <StackLayout VerticalOptions="CenterAndExpand">
+                <Grid Margin="20">
+                    <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="3*"/>
                 </Grid.ColumnDefinitions>
@@ -43,7 +43,17 @@
                        IsPassword="True"
                        Placeholder="Enter your password"
                        Text="{Binding Password}"/>
-            </Grid>
+                </Grid>
+                <Label FontAttributes="Bold"
+                    HorizontalOptions="Center" 
+                    Text="Forgot your password?"
+                    TextColor="{StaticResource ColorFontInverse}">
+                    <Label.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding ForgotPasswordCommand}"/>
+                    </Label.GestureRecognizers>
+                </Label>
+            </StackLayout>
+
             <StackLayout>
                 <Button Command="{Binding LoginCommand}" 
                         IsEnabled="{Binding IsEnabled}"
