Fixing The Return When Adding a Expense

--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/TripDetailPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/TripDetailPage.xaml
@@ -82,7 +82,7 @@
                                CornerRadius="10">
                             <Grid>
                                 <Grid.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding SelectTripCommand}"/>
+                                    <TapGestureRecognizer Command="{Binding SelectExpenseCommand}"/>
                                 </Grid.GestureRecognizers>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" />
