--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/ExpenseDetailPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/ExpenseDetailPage.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="ExpensesManagment.Prism.Views.ExpenseDetailPage">
+             x:Class="ExpensesManagment.Prism.Views.ExpenseDetailPage"
+             Title="{Binding Title}"
+             BackgroundColor="{StaticResource ColorBackgroud}">
   
 </ContentPage>
